--- a/static/style.css
+++ b/static/style.css
@@ -101,3 +101,91 @@ td:last-child {
 .watch-btn:hover {
     background-color: #21867a;
 }
+.stream-buttons {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.stream-btn {
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #457b9d;
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.stream-btn:hover {
+    background-color: #1d3557;
+}
+
+.home-btn {
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #2a9d8f;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+}
+
+.home-btn:hover {
+    background-color: #21867a;
+}
+.iframe-container {
+    width: 80%; /* Default width */
+    height: 400px; /* Default height */
+    resize: both; /* Allow resizing both horizontally and vertically */
+    overflow: auto; /* Add scrollbars if content overflows */
+    border: 2px solid #ddd;
+    margin: 20px auto; /* Center the container */
+    position: relative;
+}
+
+.iframe-container iframe {
+    width: 100%;
+    height: 100%;
+    border: none; /* Remove the iframe border */
+}
+.player-boxscore {
+    margin-top: 20px;
+}
+
+.player-boxscore h2 {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.player-boxscore table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0 auto;
+    background-color: #f9f9f9;
+}
+
+.player-boxscore th, .player-boxscore td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+
+.player-boxscore th {
+    background-color: #264653;
+    color: white;
+    font-weight: bold;
+}
+
+.player-boxscore tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.player-boxscore tr:hover {
+    background-color: #ddd;
+}
